crates/linkage-blaze-core/tests/ui_fail/restore_undefined_mark.stderr
error[E0080]: evaluation panicked: restore: no mark found with name (mark must be defined before restore)
 --> tests/ui_fail/restore_undefined_mark.rs:5:48
  |
5 | ...10> = LinkageFixed::start().forward(1.0).restore("never_marked"); // error: no mark found with name
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `RESTORE_UNDEFINED` failed inside this call
  |
note: inside `LinkageFixed::<0, 10>::restore`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/lib.rs
  |
  |     emit_fixed_step_methods!();
  |     -------------------------- in this macro invocation
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `emit_fixed_step_methods` (in Nightly builds, run with -Z macro-backtrace for more info)
